[ADD]->Cambios hata la clase 21

--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -17,4 +17,10 @@
   <div>
     <app-wave-audio audioUrl="assets/audio.mp3" />
   </div>
+
+  <p>With INIT: {{ $withInit() }}</p>
+  <button (click)="emitWithInit()">emit with init</button>
+
+  <p>Without INIT: {{ $withoutInit() }}</p>
+  <button (click)="emitWithoutInit()">emit without init</button>
 </div>
