[ADD]->Se agregó el contenido hasta el último video del curso

--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -51,6 +51,13 @@
       </button>
     </div>
   </div>
-  <app-related [slug]="data.slug" />
+
+  <div class="mt-80"></div>
+
+  @defer(on viewport) {
+    <app-related [slug]="data.slug" />
+  } @placeholder {
+    <p>Loading...</p>
+  }
 }
 
