--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-lg font-bold">About</h1>
   <p class="text-base">
     Lorem ipsum dolor
-    <span highlight>sit amet consectetur adipisicing elit.</span> Facere vel
+    <span appHighlight>sit amet consectetur adipisicing elit.</span> Facere vel
     delectus numquam aliquid itaque nulla. Alias fugiat est, voluptatem commodi
     soluta, ad et eveniet odit rem perferendis porro, quidem iste.
   </p>
